Layout issue fixed

--- a/style.css
+++ b/style.css
@@ -106,7 +106,13 @@
     width: 230px;
     background-color: #fff;
     overflow-y: scroll;
-
+    z-index: 1;
+    position: absolute;
+    width: 260px;
+}
+.content{
+    margin: 0 0 0 260px;
+    padding: 15px 30px;
 }
 .sidebar_categories{
     width:100%;
@@ -130,7 +136,7 @@
     cursor: pointer;
 }
 .nav2{
-    width: 100vw;
+    width: 100%;
     height: 70px;
     padding: 8px;
     display: flex;
